Start of redo of how the Dimensional rendrer is done a bit.